<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/monitor"
            android:checked="true"
            android:icon="@drawable/monitor"
            android:title="@string/Monitor"/>
        <item
            android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/Search"/>

        <item
            android:id="@+id/report"
            android:icon="@drawable/report"
            android:title="@string/Analyze"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group2">


        <item
            android:id="@+id/setting"

            android:icon="@drawable/settings"
            android:title="@string/Settings"/>
        <item
            android:id="@+id/logout"

            android:icon="@drawable/logout"
            android:title="@string/Logout"/>
    </group>

</menu>